--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ input, select {
     margin-left: 1%;
     margin-right: 1%;
     margin-bottom: 1%;
+    padding-top: 20px;
 }
 
 .logowrapper {
@@ -106,7 +107,8 @@ input, select {
 }
 
 .logo {
-    width: 50%;
+    width: 80%;
+    padding-bottom: 20px;
 }
 
 nav {
@@ -131,7 +133,7 @@ nav ul li a{
 
 .content {
     width: 70%;
-    padding-left: 20%;
+    padding-left: 25%;
     display: inline-block;
 }
 
