--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ input, select {
 }
 
 .logo {
-    width: 80%;
+    width: 90%;
     padding-bottom: 20px;
 }
 
@@ -124,10 +124,10 @@ nav ul li {
 }
 
 nav ul li a{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
+    font-family: 'Poor Story', cursive;
+    font-weight: 400;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 24px;
     color: #1c1c1c;
 }
 
@@ -138,6 +138,6 @@ nav ul li a{
 }
 
 h1 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poor Story', cursive;
     font-weight: 700;
 }
