--- a/style.css
+++ b/style.css
@@ -259,6 +259,7 @@ nav ul li a:hover{
         margin-right: auto;
         width: 100%;
         display: block;
+        text-align: center;
     }
 }
 
