--- a/style.css
+++ b/style.css
@@ -201,8 +201,9 @@ nav ul li a:hover{
 
 .menuwrapper {
     margin-top: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 100%;
 }
 
 .menuitem{
