--- a/style.css
+++ b/style.css
@@ -323,16 +323,28 @@ nav ul li a:hover{
     .snsmenu{
         padding-left: 20%;
     }
+    .menuwrapper {
+        margin-top: 50px;
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 770px){
     .snsmenu{
         padding-left: 17%;
     }
+    .menuwrapper {
+        margin-top: 50px;
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 510px){
     .snsmenu{
         padding-left: 15%;
+    }
+    .menuwrapper {
+        margin-top: 50px;
+        width: 100%;
     }
 }
