--- a/style.css
+++ b/style.css
@@ -161,7 +161,8 @@ nav ul li a:hover{
 }
 
 .snsmenu{
-    margin-left: 2%;
+    display: inline-block;
+    margin: auto;
     padding-top: 7%;
 }
 
@@ -305,7 +306,7 @@ nav ul li a:hover{
     }
     
     .snsmenu{
-        display: block;
+        display: inline-block;
         margin-left: 25%;
         margin-right: 25%;
         margin-bottom: 5px;
